hard-gists/1269098/run.log
=== Docker Run Log for 1269098 ===
Started at: Mi 29. Okt 12:04:25 CET 2025

[2025-10-29 12:04:25] START: Running container for 1269098
[2025-10-29 12:04:26] SUCCESS: Container 0b135f3bbf2ab38353ee63d26d1ced46fdbd0c34e82f8bb9dc4648a198467ba8 started for 1269098
=== Container logs for 1269098 ===
  File "/snippet.py", line 32
    print "Error opening capture device"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1269098 ===
[2025-10-29 12:04:28] INFO: Container 0b135f3bbf2ab38353ee63d26d1ced46fdbd0c34e82f8bb9dc4648a198467ba8 has stopped
